[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapper"
version = "0.1.0"
description = "Tool for processing diplomatic cables using DataFusion"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "datafusion>=0.7.0",
    "pyarrow>=7.0.0",
]

[project.scripts]
cables-cli = "mapper.cli:main"

[tool.setuptools]
packages = ["mapper"]
