[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapper"
version = "0.1.0"
description = "Tool for processing diplomatic cables using DataFusion"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "datafusion>=0.7.0",
    "pyarrow>=7.0.0",
    "spacy>=3.8.4",
    "en-core-web-sm",
    "sentence-transformers>=4.1.0",
    "pydantic>=2.11.3",
    "torch>=2.7.0",
    "rich>=14.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.2",
    "scikit-learn>=1.0.0",
]

[project.scripts]
cables-cli = "mapper.cli:main"

[tool.setuptools]
packages = ["mapper"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
